create home section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
 
     <!-- end header -->
 
+    <!-- home -->
+        <div class="home"> 
+            <div class="text">
+                <h1>This website is awesome</h1>
+                <p>  Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Hic aliquam vel iusto rerum nihil recusandae eveniet eaque nobis 
+                    officiis accusamus qui officia, exercitationem, nulla magni at. Sit repellat amet architecto.</p>
+                    <button>sign up</button>
+            </div>
+            <div class="img">
+
+            </div>
+        </div>
+    <!-- end home -->
+
     
 </body>
 </html>
