create Info and quote sections

--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
             </div>
         </div>
     <!-- end home -->
+    <!-- info -->
+        <div class="info">
+            <h1> Information</h1>
+            <div class="info-images"> 
+                <div>
+                    <div class="img"> </div>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div>
+                    <div class="img"> </div>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div>
+                    <div class="img"> </div>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div>
+                    <div class="img"> </div>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </div>
+    <!-- end info -->
+
+    <!-- quote -->
+    <div class="quote">
+
+        <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus natus, labore, porro,
+             aspernatur at vel corrupti fugit laboriosam amet fuga placeat nam delectus deserunt earum voluptates quas doloremque. Suscipit, eos.
+            </p>
+
+       <p class="author">
+        -The author
+       </p>
+    </div>
+
+    <!-- end quote -->
 
     
 </body>
