create about section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
 
     <!-- end quote -->
 
+    <!-- about -->
+        <div class="about">
+            <div class="text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking button right over there</p>
+            </div>
+            <button> Sign up</button>
+
+        </div>
+    <!-- end about -->
+
     
 </body>
 </html>
