--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 
         </div>
     <!-- end about -->
+    <!-- footer -->
+        <div class="footer">  
+            Copyright 	&#169; &nbsp; <span>The Author 2023</span>
+        </div>
+    <!-- end footer -->
 
     
 </body>
