add font icons , modify header
change header font , add logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <title>Landing page</title>
 </head>
 <body>
@@ -10,7 +11,8 @@
     <!-- header -->
         <div class="header">
             <div class="header-left"> 
-                Logo
+                <i class="fa-solid fa-lemon"></i>
+                <h3>Stay Healthy</h3>
             </div>
 
             <div class="header-right">
