Modify Info section
add images of foods , and change text

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <!-- home -->
         <div class="home"> 
             <div class="text">
-                <h1>This website is awesome</h1>
-                <p>  Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Hic aliquam vel iusto rerum nihil recusandae eveniet eaque nobis 
-                    officiis accusamus qui officia, exercitationem, nulla magni at. Sit repellat amet architecto.</p>
+                <h1>Healthy eating, happy living.</h1>
+                <p>  Our goal is to promote healthy eating,  
+                    When you eat healthy foods, you give your body the nutrients it needs to function properly.
+                     This can help you feel more energized, have more mental clarity, and sleep better.</p>
                     <button>sign up</button>
             </div>
             <div class="img">
-
+                <img src="images/healthy-food.jpg" alt="healthy food picture">
             </div>
         </div>
     <!-- end home -->
@@ -46,20 +46,27 @@
             <h1> Information</h1>
             <div class="info-images"> 
                 <div>
-                    <div class="img"> </div>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img"> 
+                        <img src="images/fruit.jpg" alt="image contain  fruits"> </div>
+                    <p> Fruits are packed with vitamins, minerals, and fiber.</p>
                 </div>
                 <div>
-                    <div class="img"> </div>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img">
+                        <img src="images/vegetables.jpg" alt="image contain  vegetables"> </div>
+                    <p> Vegetables are low in calories and high in nutrients.</p>
                 </div>
                 <div>
-                    <div class="img"> </div>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img">
+                        <img src="images/whole-grains.jpeg" alt="image contain whole grains"> 
+                    </div>
+                    <p> Whole grains provide energy and fiber.</p>
                 </div>
                 <div>
-                    <div class="img"> </div>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="img"> 
+                    <img src="images/protein.jpg" alt="image contain protein sources">
+                </div>
+                    <p> Lean protein help build and repair muscle tissue.
+                    </p>
                 </div>
             </div>
         </div>
