Modify quote and about section
add quote about health ,
and modify about section to match the page content

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     <!-- quote -->
     <div class="quote">
 
-        <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus natus, labore, porro,
-             aspernatur at vel corrupti fugit laboriosam amet fuga placeat nam delectus deserunt earum voluptates quas doloremque. Suscipit, eos.
+        <p class="text"> No man has the right to be an amateur in the matter of physical training.
+             It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable.
             </p>
 
        <p class="author">
-        -The author
+        - Socrates
        </p>
     </div>
 
@@ -90,7 +90,7 @@
         <div class="about">
             <div class="text">
                 <h2>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking button right over there</p>
+                <p>Sign up for our healthy plans by clicking button right over there</p>
             </div>
             <button> Sign up</button>
 
