Fix hyperlinks in the header.
add href to the hyperlinks

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             <div class="header-right">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Info</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#info">Info</a></li>
+                    <li><a href="#about">About</a></li>
                 </ul>
             </div>
 
@@ -28,7 +28,7 @@
     <!-- end header -->
 
     <!-- home -->
-        <div class="home"> 
+        <div class="home" id="home"> 
             <div class="text">
                 <h1>Healthy eating, happy living.</h1>
                 <p>  Our goal is to promote healthy eating,  
@@ -42,7 +42,7 @@
         </div>
     <!-- end home -->
     <!-- info -->
-        <div class="info">
+        <div class="info" id="info">
             <h1> Information</h1>
             <div class="info-images"> 
                 <div>
@@ -87,7 +87,7 @@
     <!-- end quote -->
 
     <!-- about -->
-        <div class="about">
+        <div class="about" id="about">
             <div class="text">
                 <h2>Call to action! It's time!</h2>
                 <p>Sign up for our healthy plans by clicking button right over there</p>
